sjengida/g0/setup_epd_line
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/setup_epd_line/src/epd.c:496:14: error: use of undeclared identifier 'rankoffsets_0'
rankoffset = rankoffsets_0[0]; 
             ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/setup_epd_line/src/epd.c:626:14: error: use of undeclared identifier 'rankoffsets_0'
rankoffset = rankoffsets_0[++rankp]; 
             ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/setup_epd_line/src/obj/epd.o] Error 1
